--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
